static maps implementation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-google-place-autocomplete": "^0.2.0",
     "react-native-google-places": "^2.4.1",
     "react-native-google-places-autocomplete": "^1.2.12",
+    "react-native-image-picker": "^0.26.4",
     "react-native-infoslider": "^1.0.1",
     "react-native-keyboard-avoiding-view": "^1.0.0",
     "react-native-maps": "^0.15.3",
@@ -39,6 +40,7 @@
     "react-native-timeline-listview": "^0.2.2",
     "react-native-user-avatar": "^1.0.3",
     "react-native-vector-icons": "^4.3.0",
+    "react-native-view-shot": "^2.0.0",
     "react-native-viewpager": "^0.2.13",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
