--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-css": "^2.0.6",
     "react-native-draggable-view": "0.0.4",
     "react-native-elements": "^0.15.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-form-generator": "^0.9.9",
     "react-native-geocoder": "^0.4.8",
     "react-native-geocoding": "^0.2.0",
