static maps, single history

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-native": "0.46.4",
     "react-native-android-back-button": "^0.3.0",
     "react-native-animatable": "^1.2.3",
+    "react-native-background-fetch": "2.0.x",
+    "react-native-background-job": "^2.0.0",
+    "react-native-background-task": "^0.2.1",
     "react-native-card-view": "0.0.3",
     "react-native-credit-card-input": "^0.3.3",
     "react-native-css": "^2.0.6",
@@ -38,6 +41,8 @@
     "react-native-shadow": "^1.2.1",
     "react-native-spinkit": "^1.1.1",
     "react-native-svg": "^5.3.1",
+    "react-native-tableview-simple": "^0.16.11",
+    "react-native-timeago": "^0.3.0",
     "react-native-timeline-listview": "^0.2.2",
     "react-native-user-avatar": "^1.0.3",
     "react-native-vector-icons": "^4.3.0",
