--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@mapbox/polyline": "^0.2.0",
     "@shoutem/ui": "^0.21.3",
     "native-base": "^2.3.0",
+    "pubnub": "^4.15.1",
     "react": "16.0.0-alpha.12",
     "react-addons-update": "^15.6.0",
     "react-native": "0.46.4",
     "react-native-android-back-button": "^0.3.0",
     "react-native-animatable": "^1.2.3",
     "react-native-background-fetch": "2.0.x",
+    "react-native-background-geolocation": "^2.9.2",
     "react-native-background-job": "^2.0.0",
     "react-native-background-task": "^0.2.1",
     "react-native-card-view": "0.0.3",
@@ -30,17 +32,21 @@
     "react-native-google-places": "^2.4.1",
     "react-native-google-places-autocomplete": "^1.2.12",
     "react-native-image-picker": "^0.26.4",
+    "react-native-infinte-progress-bar": "^0.0.1",
     "react-native-infoslider": "^1.0.1",
     "react-native-keyboard-avoiding-view": "^1.0.0",
     "react-native-maps": "^0.15.3",
     "react-native-material-design": "^0.3.7",
     "react-native-modal-datetime-picker": "^4.9.0",
+    "react-native-notifications": "^1.1.16",
     "react-native-photo-upload": "^1.0.3",
     "react-native-pulse": "^1.0.5",
+    "react-native-push-notification": "^3.0.1",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-shadow": "^1.2.1",
     "react-native-spinkit": "^1.1.1",
     "react-native-svg": "^5.3.1",
+    "react-native-switch": "^1.1.0",
     "react-native-tableview-simple": "^0.16.11",
     "react-native-timeago": "^0.3.0",
     "react-native-timeline-listview": "^0.2.2",
