--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "react-native": "0.46.4",
     "react-native-android-back-button": "^0.3.0",
     "react-native-animatable": "^1.2.3",
-    "react-native-background-fetch": "2.0.x",
     "react-native-background-geolocation": "^2.9.2",
-    "react-native-background-job": "^2.0.0",
-    "react-native-background-task": "^0.2.1",
     "react-native-card-view": "0.0.3",
     "react-native-credit-card-input": "^0.3.3",
     "react-native-css": "^2.0.6",
     "react-native-draggable-view": "0.0.4",
     "react-native-elements": "^0.15.0",
+    "react-native-fcm": "^9.1.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-form-generator": "^0.9.9",
     "react-native-geocoder": "^0.4.8",
@@ -38,12 +36,15 @@
     "react-native-maps": "^0.15.3",
     "react-native-material-design": "^0.3.7",
     "react-native-modal-datetime-picker": "^4.9.0",
+    "react-native-modal-select-option": "0.0.6",
     "react-native-notifications": "^1.1.16",
     "react-native-photo-upload": "^1.0.3",
     "react-native-pulse": "^1.0.5",
     "react-native-push-notification": "^3.0.1",
+    "react-native-radio-buttons": "^1.0.0",
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-shadow": "^1.2.1",
+    "react-native-simple-radio-button": "^2.6.1",
     "react-native-spinkit": "^1.1.1",
     "react-native-svg": "^5.3.1",
     "react-native-switch": "^1.1.0",
