--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-css": "^2.0.6",
     "react-native-draggable-view": "0.0.4",
     "react-native-elements": "^0.15.0",
-    "react-native-fcm": "^9.1.0",
+    "react-native-fcm": "^9.3.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-form-generator": "^0.9.9",
     "react-native-geocoder": "^0.4.8",
@@ -60,6 +60,9 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
+  },
+  "rnpm": {
+    "assets": ["./fonts"]
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
