--- a/package.json
+++ b/package.json
@@ -6,54 +6,37 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "@mapbox/polyline": "^0.2.0",
-    "@shoutem/ui": "^0.21.3",
     "native-base": "^2.3.0",
-    "pubnub": "^4.15.1",
     "react": "16.0.0-alpha.12",
     "react-addons-update": "^15.6.0",
     "react-native": "0.46.4",
     "react-native-android-back-button": "^0.3.0",
     "react-native-animatable": "^1.2.3",
-    "react-native-background-geolocation": "^2.9.2",
     "react-native-card-view": "0.0.3",
+    "react-native-communications": "^2.2.1",
+    "react-native-connection-info": "^1.1.0",
     "react-native-credit-card-input": "^0.3.3",
-    "react-native-css": "^2.0.6",
-    "react-native-draggable-view": "0.0.4",
     "react-native-elements": "^0.15.0",
     "react-native-fcm": "^9.3.0",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-form-generator": "^0.9.9",
-    "react-native-geocoder": "^0.4.8",
-    "react-native-geocoding": "^0.2.0",
-    "react-native-google-place-autocomplete": "^0.2.0",
-    "react-native-google-places": "^2.4.1",
-    "react-native-google-places-autocomplete": "^1.2.12",
-    "react-native-image-picker": "^0.26.4",
-    "react-native-infinte-progress-bar": "^0.0.1",
     "react-native-infoslider": "^1.0.1",
     "react-native-keyboard-avoiding-view": "^1.0.0",
     "react-native-maps": "^0.15.3",
     "react-native-material-design": "^0.3.7",
-    "react-native-modal-datetime-picker": "^4.9.0",
-    "react-native-modal-select-option": "0.0.6",
     "react-native-notifications": "^1.1.16",
-    "react-native-photo-upload": "^1.0.3",
+    "react-native-offline": "^3.1.1",
     "react-native-pulse": "^1.0.5",
     "react-native-push-notification": "^3.0.1",
-    "react-native-radio-buttons": "^1.0.0",
+    "react-native-responsive-image": "^2.1.0",
     "react-native-router-flux": "^4.0.0-beta.16",
+    "react-native-scrollview-smart": "^0.1.5",
     "react-native-shadow": "^1.2.1",
-    "react-native-simple-radio-button": "^2.6.1",
-    "react-native-spinkit": "^1.1.1",
-    "react-native-svg": "^5.3.1",
-    "react-native-switch": "^1.1.0",
+    "react-native-snackbar-dialog": "^1.4.0",
     "react-native-tableview-simple": "^0.16.11",
     "react-native-timeago": "^0.3.0",
     "react-native-timeline-listview": "^0.2.2",
     "react-native-user-avatar": "^1.0.3",
     "react-native-vector-icons": "^4.3.0",
-    "react-native-view-shot": "^2.0.0",
     "react-native-viewpager": "^0.2.13",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
@@ -62,7 +45,9 @@
     "redux-thunk": "^2.2.0"
   },
   "rnpm": {
-    "assets": ["./fonts"]
+    "assets": [
+      "./fonts"
+    ]
   },
   "devDependencies": {
     "babel-jest": "^20.0.3",
