--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "firebase": "^4.6.2",
     "native-base": "^2.3.0",
     "react": "16.0.0-alpha.12",
     "react-addons-update": "^15.6.0",
     "react-native": "0.46.4",
     "react-native-android-back-button": "^0.3.0",
     "react-native-animatable": "^1.2.3",
+    "react-native-axios": "^0.17.1",
     "react-native-card-view": "0.0.3",
     "react-native-communications": "^2.2.1",
     "react-native-connection-info": "^1.1.0",
     "react-native-credit-card-input": "^0.3.3",
+    "react-native-easy-toast": "^1.0.9",
     "react-native-elements": "^0.15.0",
     "react-native-fcm": "^9.3.0",
     "react-native-form-generator": "^0.9.9",
     "react-native-infoslider": "^1.0.1",
     "react-native-keyboard-avoiding-view": "^1.0.0",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-maps": "^0.15.3",
     "react-native-material-design": "^0.3.7",
     "react-native-notifications": "^1.1.16",
@@ -31,6 +35,8 @@
     "react-native-router-flux": "^4.0.0-beta.16",
     "react-native-scrollview-smart": "^0.1.5",
     "react-native-shadow": "^1.2.1",
+    "react-native-smart-splash-screen": "^2.3.5",
+    "react-native-snackbar-component": "^1.0.8",
     "react-native-snackbar-dialog": "^1.4.0",
     "react-native-tableview-simple": "^0.16.11",
     "react-native-timeago": "^0.3.0",
